k8s/deployment-5.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: k8s-intro
  name: wibble
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wibble
  template:
    metadata:
      labels:
        app: wibble
    spec:
      containers:
      - name: wibble
        image: eu.gcr.io/justpark-production/k8s-intro-wibble:v0.1
