k8s/service-2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8s-intro
  name: wibble
  namespace: k8s-intro
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: wibble
  type: ClusterIP
