k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8s-intro
  name: k8s-intro
  namespace: k8s-intro
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: k8s-intro
  type: ClusterIP
